# xled

./: .gitignore  Cargo.toml  DESIGN.md  README.md  RELEASING.md  SECURITY.md  composition-grammar.md  ebnf.md  errors.md  expr-grammar.md  grammar-notes.md  install.sh  intake-taxonomy.md  proving-ground.md  semantics.md  uninstall.sh
fixtures/: README.md  app-portfolio.csv  bracket-headers.csv  contacts.csv  daily-sales.csv  headerless.csv  ids-zips.csv  inventory.tsv  messy-money.csv  mixed-dates.csv  products.csv  quoted-hell.csv  ragged.csv  tricky-headers.csv
fixtures/messy/: fill-down.csv  multivalue.csv  outline.csv  preamble.csv  side-by-side.csv  spacer-column.csv  stacked.csv
src/: ast.rs  errors.rs  exec.rs  expr.rs  io.rs  lib.rs  main.rs  model.rs  parser.rs  resolver.rs  session.rs  subst.rs
tests/: adversarial.rs  anchors_extract.rs  slice1_inspect.rs  slice2_substitute.rs  slice3_compute.rs  slice4_structural.rs  slice5_session.rs
